import { CmptStyleRaw } from "./CmptStyleRaw.js";


export class CmptHookStyleRaw extends CmptStyleRaw {
   
}