classDiagram

%% PageNode----------------------------
PageNode *-- PageGeneralInfo
PageNode *-- PageMeta
PageNode o-- TmptHub
PageNode *-- TmptSET
PageNode *-- CmptNodeBUSH


%% TmptSet----------------------------
TmptSET o-- TmptHub

%% CmptRawTREE------------------------
CmptNodeBUSH *-- CmptNodeSET

%% CmptNodeSET-------------------------
CmptNodeSET o-- CmptNode
CmptNodeSET o-- CmptNode

%% CmptNode----------------------------
CmptNode *-- NodeAttachingPoint
CmptNode o-- Tmpt
CmptNode *-- CmptRawStyle
CmptNode *-- CmptRawStyleConfig
CmptNode *--o CmptHookNode

%% CmptHookNode-----------------------
CmptHookNode o-- TmptHook
CmptHookNode *-- CmptHookStyleRaw
CmptHookNode *-- CmptHookStyleConfigRaw
CmptHookNode *-- NodeAttacher


%% NodeAttachingPoint----------
NodeAttachingPoint o-- NodeAttachingPointLocation

%% NodeAttacher-------------------------
NodeAttacher o-- NodeAttacherLocation




